kube/reapers-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: reapers
  namespace: default
spec:
  ports:
    - port: 802
      targetPort: 80
  selector:
    service: reapers
  type: NodePort
