kube/reapers-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reapers-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - smartbch.reapers.cash
    secretName: reapers-tls
  defaultBackend:
    service:
      name: reapers
      port:
        number: 802
  rules:
  - host: smartbch.reapers.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: reapers
            port:
              number: 802
